test/corpus/fail/M0102.mo
=========
M0102.mo
=========

ignore (func (_) {})

---

(source_file
  (exp_dec
    (ignore_exp
      (par_exp
        (func_exp
          (tup_pat
            (wild_pat))
          (func_body
            (block_exp)))))))
